--- a/app/globals.css
+++ b/app/globals.css
@@ -2,6 +2,6 @@
 @tailwind components;
 @tailwind utilities;
 
-.navbar_style{
-  @apply bg-tersier
+.navbar_style {
+  @apply bg-tersier shadow-sm;
 }
